# ccs

./: Cargo.toml  README.md  benchmark.py  flake.nix  render_benchmark.py
.github/workflows/: flake.yml
examples/: beverage-machine1.ccs  beverage-machine2.ccs  bisimbench_10k_10k.ccs  bisimbench_1k_1k.ccs  bisimbench_200_200.ccs  bisimbench_200_200_5.ccs  bisimbench_25k_25k.ccs  bisimbench_400_1000.ccs  bisimtest01.ccs  bisimtest02.ccs  bisimtest03.ccs  broken-clock.ccs  clock.ccs  coffee-machine.ccs  disconnected.ccs  trace1.ccs  trace2.ccs
src/: bisimilarity.rs  ccs.rs  error.rs  grammar.pest  lts.rs  main.rs  parser.rs  random.rs
src/bisimilarity/: fixpoint.rs  list.rs  mod.rs  naive.rs  paige_tarjan.rs
src/tests/: bisimilarity.rs  mod.rs  parsing.rs
