[package]
name = "ccs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
pest = "2.7.14"
pest_derive = "2.7.14"
rand = "0.8.5"
thiserror = "2.0.2"

[dev-dependencies]
ntest = "0.9.3"

[features]
very_big_test = []

[profile.profiling]
inherits = "release"
debug = true
